----------------------------------------------------------------------
 OmegaT 2.1.8 update 1
----------------------------------------------------------------------
  0 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.1.8 update 1 vs. 2.1.8

  Bug fixes:

  - Some advanced search parameters were not working properly

----------------------------------------------------------------------
 OmegaT 2.1.8 
----------------------------------------------------------------------
  3 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.1.8 vs. 2.1.7 update 3

  Implemented requests:

  - Aggregate OpenXML tags
  http://sourceforge.net/support/tracker.php?aid=3036227

  Other enhancements:

  - Italian localisation updated to 2.1.7 (UI, Readme, Instant Start)
  - Spanish localisation updated to 2.1.7 (UI, Readme, Instant Start, documentation)

----------------------------------------------------------------------
 OmegaT 2.1.7 update 3
----------------------------------------------------------------------
  2 Enhancements
  5 Bugfixes
----------------------------------------------------------------------
2.1.7 update 3 vs. 2.1.7 update 2

  Implemented requests:

  - Extended project statistics
  http://sourceforge.net/support/tracker.php?aid=2988953

  Other enhancements:
  
  - OpenXML filter: new options to translate diagrams (Word) and 
charts (PowerPoint)

  Bug fixes:

  - In some circumstances, the search results could be all highlighted.
The issue was not totally corrected in update 2

  - Superfluous debug message (visible in the console and in the log),
e.g., 15082: Info: DEBUG: class=java.lang.Integer val=24, has been removed

  - OpenXML filter: for some Word shapes, the text presented to the 
translator was not the text visible in Word 2007/2010, but only the "fallback"
text for backward compatibility. As a result, the text appeared untranslated 