@@ -829,8 +829,11 @@ HELPANDMANUAL_FILTER_NAME=Fichiers Help & Manual
 # Typo3Filter.java
 TYPO3_FILTER_NAME=Fichiers LocManager Typo3
 
-# Typo3Filter.java
+# WixFilter.java
 WIX_FILTER_NAME=Fichiers de localisation WiX
+
+# SvgFilter.java
+SVG_FILTER_NAME=Fichiers image SVG
 
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Erreur dans le fichier {0} \u00e0 la ligne {1}
