@@ -1,10 +1,14 @@
 ----------------------------------------------------------------------
  OmegaT 2.1.8 update 1
 ----------------------------------------------------------------------
-  0 Enhancement
+  1 Enhancement
   1 Bugfix
 ----------------------------------------------------------------------
 2.1.8 update 1 vs. 2.1.8
+
+  Other enhancements:
+
+  - SVG image filter
 
   Bug fixes:
 
